--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,10 @@
         },
         "psr-0": {
             "": "extend/"
-        }
+        },
+        "classmap": [
+           "one"
+        ]
     },
     "config": {
         "preferred-install": "dist"
